logs/tracking/build.make.675.log.stderr
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp: In member function ‘void DepthFilter::updateFilter(Eigen::Matrix4f, Eigen::Matrix<float, 2, -1>, Eigen::Matrix<float, 2, -1>)’:
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:98:9: warning: unused variable ‘tau’ [-Wunused-variable]
   float tau = computeTau(T, pts_triangulated.col(i));
         ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:99:62: error: ‘tau’ was not declared in this scope
   float tau_inv  =  0.5 * (1.0/std::max((float) 0.0000001, x-tau) - 1.0/(x+tau));
                                                              ^
make[2]: *** [CMakeFiles/tracking.dir/src/DepthFilter.cpp.o] Error 1
make[1]: *** [CMakeFiles/tracking.dir/all] Error 2
make: *** [all] Error 2
